[gd_scene load_steps=2 format=3 uid="uid://dy8od11blytd7"]

[ext_resource type="Script" uid="uid://cpxap6y2xhy4n" path="res://scripts/pause_menu.gd" id="1_e7fsp"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e7fsp")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Продолжить"

[node name="Load" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Загрузить последнее сохранение"

[node name="Exit" type="Button" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Выход"

[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="HBoxContainer/MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
